test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/exception.widl
// Extracted from http://dev.w3.org/2006/webapi/WebIDL/ on 2011-05-06
// IDL exceptions are removed by https://github.com/heycam/webidl/commit/50e172ec079db073c3724c9beac1b576fb5dbc47

exception SomeException {
};

